--- a/vercel.json
+++ b/vercel.json
@@ -1,5 +1,22 @@
 {
-  "rewrites": [
-    { "source": "/manifest.json", "destination": "/public/manifest.json" }
+  "headers": [
+    {
+      "source": "/manifest.json",
+      "headers": [
+        {
+          "key": "Content-Type",
+          "value": "application/json"
+        }
+      ]
+    },
+    {
+      "source": "/service-worker.js",
+      "headers": [
+        {
+          "key": "Cache-Control",
+          "value": "public, max-age=0, must-revalidate"
+        }
+      ]
+    }
   ]
 }
